# sagittal_average

./: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  sagittal_average.html  sagittal_average.tests.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs2gh.yml  pytest.yml
_sources/: modules.rst.txt  sagittal_average.rst.txt  sagittal_average.tests.rst.txt
docs/: conf.py
