[metadata]
name = sagittal_average
version = 0.1.0
author = Charlene Bultoc
author_email = c.bultoc@neurolab.ac.uk
license = BSD 3-Clause License
description = Calculate the averages through a sagittal plane.
long_description = file: README.md, LICENSE.rst
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.9
# add your package requirements here
install_requires =
    numpy

[options.entry_points]
console_scripts =
    sagverage = sagittal_average.command:process

[options.packages.find]
exclude =
    *tests
